fix : re-enabled restx-annotation-processor-tests-java8